--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@schematics/angular": "^9.1.0",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
