add card swiper slider.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
